--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         // Load projects
         async function loadProjects() {
             try {
-                const response = await fetch('https://api.github.com/users/manugeni/repos?sort=updated&per_page=6');
+                const response = await fetch('https://api.github.com/users/mkblane/repos?sort=updated&per_page=6');
                 const repos = await response.json();
                 const container = document.getElementById('projects-container');
                 
